# StateSpaceRecognizer

./: .pylintrc  README.md  noxfile.py  setup.cfg
src/ssr/: __init__.py  mamba_recognizer.py  tokenizer.py  trainer.py
tests/: test_dummy.py  test_recognizer.py
tests/ressources/: recognizer.yml
