##########################
# Setup.py Configuration #
##########################
[metadata]
name = ssr
version = 0.0.1-dev
description = optical character recognition based on mamba state space model
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code
download_url = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code/releases
project_urls =
    Bug Tracker = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code/issues
    Source Code = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code


keywords =
    Optical Character Recognition
    Deep Learning

# Author information
author = Christian Schultze


# License information
license = EUROPEAN UNION PUBLIC LICENCE
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    torchmetrics
    numpy
    torch
    torchvision
    Levenshtein
    lightning
    mamba


[options.extras_require]
dev =
    pytest
    nox
    mypy
    pylint

python_requires = >=3.10

packages = find:
package_dir =
    = src

[options.packages.find]
where = src